--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ English name: **Friedrich Foo**
  
 Mobile phone: **18810987938**
  
-E-mail address: **594002621@qq.com**
+E-mail address: **594002621@qq.com** or **friedrich-foo@pku.edu.cn**
  
   **So** long as men can breathe, or eyes can see,
  
